samples/_failures_safe/1761419266_0c02ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fea46b6.c: In function ‘main’:
./samples/SAFE/__tmp_0fea46b6.c:159:21: error: expected ‘;’ at end of input
  159 |             return 1
      |                     ^
      |                     ;
./samples/SAFE/__tmp_0fea46b6.c:159:13: error: expected declaration or statement at end of input
  159 |             return 1
      |             ^~~~~~
./samples/SAFE/__tmp_0fea46b6.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0fea46b6.c:159:13: error: expected declaration or statement at end of input
